--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,10 @@
             <classifier>sources</classifier>
             <version>${jaxb.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
